@C changes accoring to findbugs eclipse plugin