@@ -1,7 +1,7 @@
 /**********************************************************************
  * $Source: /cvsroot/jameica/jameica/src/de/willuhn/jameica/gui/input/CheckboxInput.java,v $
- * $Revision: 1.7 $
- * $Date: 2005/08/22 13:31:52 $
+ * $Revision: 1.8 $
+ * $Date: 2005/08/25 21:18:24 $
  * $Author: web0 $
  * $Locker:  $
  * $State: Exp $
@@ -58,7 +58,7 @@ public class CheckboxInput extends AbstractInput
    */
   public Object getValue()
   {
-  	return new Boolean(button.getSelection());
+  	return Boolean.valueOf(button.getSelection());
   }
 
   /**
@@ -121,6 +121,9 @@ public class CheckboxInput extends AbstractInput
 
 /*********************************************************************
  * $Log: CheckboxInput.java,v $
+ * Revision 1.8  2005/08/25 21:18:24  web0
+ * @C changes accoring to findbugs eclipse plugin
+ *
  * Revision 1.7  2005/08/22 13:31:52  web0
  * *** empty log message ***
  *
